--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "supabase": "^1.11.3"
   },
   "devDependencies": {
     "eslint": "8.26.0",
